--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -10,11 +14,11 @@ svg .cell {
 }
 
 svg .cell.hilit {
-  fill: red;
+  fill: hsl(0, 100%, 50%);
 }
 
 svg .cell.source {
-  fill: blue;
+  fill: hsl(240, 100%, 50%);
 }
 
 fieldset {
@@ -45,4 +49,20 @@ main {
 svg {
   padding: 0;
   margin: 0;
+}
+
+input[type="number"] {
+  width: 5em;
+}
+
+.note {
+  font-style: italic;
+  font-size: 0.8rem;
+  color: hsl(0, 0%, 30%);
+}
+
+#shapes {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
